# ad-dicted

./: .gitignore
solution/: .env  .env.template  .isort.cfg  .ruff.toml  Dockerfile  Dockerfile-aiogram  Dockerfile-fastapi  README-ru.md  README.md  docker-compose.yml  pyproject.toml
solution/app/adapters/aiogram/: handlers.py  main.py
solution/app/adapters/aiogram/campaigns/: handlers.py
solution/app/adapters/aiogram/menu/: handlers.py
solution/app/adapters/containers/: debug.py  production.py
solution/app/adapters/fastapi/: main.py
solution/app/adapters/fastapi/api/: routes.py  schemas.py
solution/app/adapters/fastapi/api/advertisers/: routes.py  schemas.py
solution/app/adapters/fastapi/api/clients/: routes.py  schemas.py
solution/app/adapters/fastapi/api/stats/: routes.py
solution/app/adapters/fastapi/api/storage/: routes.py
solution/app/alembic/: env.py
solution/app/alembic/versions/: 00e68a0412de_.py  16739ba7bee5_.py  25169a3985a3_.py  2576039db03f_.py  3d5180599fd0_.py  3efbe6347a61_.py  43b3fe35409a_.py  4d2296302b0e_.py  783cb5b979eb_.py  99d2294771bf_.py  9e561c3ce4e3_.py  b642ff7c4b90_.py  cd3bbd014380_.py  cd468b0084bd_.py  e01a65d55479_.py  ec4d590fe973_.py  fd399ebfeb53_.py
solution/app/core/: config.py
solution/app/core/domain/: repositories.py
solution/app/core/infra/moderation/: mock.py  yandexgpt.py
solution/app/core/infra/text_generators/: mock.py  yandexgpt.py
solution/app/core/infra/yandexgpt/: interactors.py
solution/app/tests/fixtures/repositories/: conftest.py
solution/app/tests/fixtures/storages/: conftest.py
solution/app/tests/fixtures/usecases/: conftest.py
solution/app/tests/fixtures/yandexgpt/: conftest.py
solution/app/tests/tavern/: 01_create_clients.tavern.yml  02_create_advertisers.tavern.yml  02_update_clients.tavern.yml  03_create_advertisers.tavern.yml  03_ml_score_advertisers.tavern.yml  04_create_campaigns.tavern.yml  04_update_advertisers.tavern.yml  config.yml
solution/app/tests/unit/usecases/: conftest.py  test_advertisers.py  test_campaigns.py  test_clients.py  test_options.py  test_scores.py
solution/grafana/dashboards/: advertisement-dashboard.json
solution/grafana/provisioning/dashboards/: dashboard.yaml
solution/grafana/provisioning/datasources/: datasource.yaml
solution/scripts/: prestart.sh  start-aiogram.sh  start-fastapi.sh  start.sh
(+93 files in other folders)
