[project]
name = "app"
version = "0.1.0"
description = "Advertisting Service REST API"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "alembic>=1.14.0",
    "fastapi[standard]>=0.115.6",
    "psycopg[binary]>=3.2.4",
    "pydantic-settings>=2.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.uv]
dev-dependencies = [
    "isort>=5.13.2",
    "ruff>=0.9.2",
]
